--- a/iNeedClass/Classes/iPhone/Perfil/EditProfileViewController.xib
+++ b/iNeedClass/Classes/iPhone/Perfil/EditProfileViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6221" systemVersion="14C68k" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6221" systemVersion="14C81f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
@@ -112,15 +112,6 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CAO-wj-EwU">
-                            <rect key="frame" x="8" y="31" width="24" height="24"/>
-                            <state key="normal" image="cancel-32.png">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="dismiss:" destination="-1" eventType="touchUpInside" id="4t6-aX-pG8"/>
-                            </connections>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BO3-HY-7Yk">
                             <rect key="frame" x="251" y="27" width="69" height="32"/>
                             <state key="normal" title="Guardar">
@@ -128,6 +119,15 @@
                             </state>
                             <connections>
                                 <action selector="save:" destination="-1" eventType="touchUpInside" id="XgT-Ub-xHU"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CAO-wj-EwU">
+                            <rect key="frame" x="0.0" y="27" width="52" height="32"/>
+                            <state key="normal" title="Salir">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="dismiss:" destination="-1" eventType="touchUpInside" id="4t6-aX-pG8"/>
                             </connections>
                         </button>
                     </subviews>
@@ -179,10 +179,7 @@
             </subviews>
             <color key="backgroundColor" white="0.96906828700000003" alpha="1" colorSpace="calibratedWhite"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="364" y="474"/>
+            <point key="canvasLocation" x="372" y="474"/>
         </view>
     </objects>
-    <resources>
-        <image name="cancel-32.png" width="32" height="32"/>
-    </resources>
 </document>
